added JVM_OPTS variable to services docker file